<resources>
    <!-- Basic app data !-->
    <string name="app_name">Weather App</string>
    <string name="weather_conditions">Weather conditions</string>
    <string name="city_name_input_placeholder">City name</string>

    <!-- Icons !-->
    <string name="refresh_icon">\u27F3</string>
    <string name="star_icon">\u2B50</string>
    <string name="bin_icon">\uD83D\uDDD1</string>
    <string name="search_icon">\uD83D\uDD0D</string>

    <!-- Basic weather mockup data !-->
    <string name="city_name">Warsaw</string>
    <string name="timestamp">Mon June 17</string>
    <string name="weather_description">Cloudy</string>
    <string name="temperature">25\u00B0C</string>
    <string name="pressure">1013mb</string>

    <!-- Additional weather mockup data !-->
    <string name="wind_speed">12 km/h</string>
    <string name="humidity">18%</string>
    <string name="wind_direction">NW</string>
    <string name="visibility">10km</string>

    <!-- Units !-->
    <string name="degrees">\u00B0</string>
    <string name="celsius">\u00B0C</string>
    <string name="fahrenheit">\u00B0F</string>
    <string name="pressure_unit">mb</string>
    <string name="metric">M</string>
    <string name="imperial">I</string>

    <!-- Tab names !-->
    <string name="basic_weather_data">Basic</string>
    <string name="additional_weather_data">Additional</string>
    <string name="forecast">Forecast</string>
    <string name="favorites">Favorite</string>

    <!-- Labels !-->
    <string name="City">City</string>

    <!-- Spinner entries !-->
    <string-array name="spinner_entries">
        <item>Warsaw</item>
        <item>Barcelona</item>
        <item>London</item>
    </string-array>

    <!-- Icon descriptions !-->
    <string name="wind_icon_description">Wind icon</string>
    <string name="wind_direction_icon_description">Wind direction icon</string>
    <string name="humidity_icon_description">Humidity icon</string>
    <string name="visibility_icon_description">Visibility icon</string>

    <!-- Dialog !-->
    <string name="dialog_title">Choose a city</string>
</resources>