<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/old_navy_navy_blue_hoodie"
    android:paddingHorizontal="10dp"
    android:paddingVertical="25dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/fragmentMenu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:background="@color/old_navy_navy_blue_hoodie"
            app:tabIndicatorColor="@android:color/holo_blue_light"
            app:tabSelectedTextColor="@android:color/holo_blue_light"
            app:tabTextAppearance="@style/CustomTabItem"
            app:tabTextColor="@color/white">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/basicWeatherFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basic_weather_data" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/additionalWeatherFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/additional_weather_data" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/forecastFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forecast" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/favoriteCitiesFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorites" />
        </com.google.android.material.tabs.TabLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.01" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentContainer"
            android:name="com.project.weatherapp.fragment.BasicWeatherDataFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8" />

        <LinearLayout
            android:id="@+id/bottomMenu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:background="@color/old_navy_navy_blue_hoodie"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/unitsRadioGroup"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:checkedButton="@id/celsiusRadio"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/celsiusRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:checked="false"
                    android:gravity="center"
                    android:text="@string/metric"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/tab_font_size" />

                <RadioButton
                    android:id="@+id/fahrenheitRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/imperial"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/tab_font_size" />
            </RadioGroup>

            <EditText
                android:id="@+id/cityNameInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/city_name_input_placeholder"
                android:inputType="text"
                android:textColor="#FFFFFF"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/tab_font_size" />

            <TextView
                android:id="@+id/refreshButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:background="#00FFFFFF"
                android:onClick="fetchData"
                android:text="@string/refresh_icon"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/icon_size" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>