<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/old_navy_navy_blue_hoodie"
    tools:context=".fragment.BasicWeatherDataFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/section_style"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city_name"
                android:textColor="#FFFFFF"
                android:textColorLink="#FFFFFF"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timestamp"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/weatherImage"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/weather_conditions"
                android:scaleType="fitCenter"
                android:src="@drawable/mockup_weather_image" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/weatherDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_description"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/temperature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/temperature"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2" />

            <TextView
                android:id="@+id/pressure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pressure"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>